@@ -1,5 +1,10 @@
 2008-03-10  Stefan Kost  <ensonic@users.sf.net>
 
+	* common/MachineInterface.h:
+	  Revert ABI break.
+
+2008-03-10  Stefan Kost  <ensonic@users.sf.net>
+
 	* configure.ac:
 	  Add CFLAG to suppress gcc warning, that if we fix it would change the
 	  ABI. Need to revert the changes in the header still.
